--- a/index.html
+++ b/index.html
@@ -54,8 +54,21 @@
     </div>
   </div>
 </header>
+<div class="content-wrapper">
+ 
 
-<div class="hero">
+  <div class="content">
+     <aside class="sidebar1"><h2>sidebar1</h2></aside>
+    <article class="main">
+      <h1>Article title</h1>
+      <p>Ac sociis ut augue pellentesque ac tincidunt phasellus cum. Non etiam auctor, eros magna magnis porta mus? Nascetur ridiculus. Nec, penatibus placerat, eros tincidunt? Aliquet magna mattis? Vel? Sit urna! Ac magna vel. Scelerisque turpis, dapibus, cursus in mid vel scelerisque nascetur et tempor aliquet, lorem ultricies lorem, est placerat mauris amet massa duis scelerisque dignissim, cum risus, tincidunt sociis vel lectus a, placerat sit augue! Elit magna, a. Enim pulvinar risus, tincidunt magna tortor? Est mauris lectus sed pellentesque habitasse ultricies a augue porttitor mid adipiscing lorem mid sed? Lacus aenean lectus, elementum cursus. Eros placerat porta ultricies pid sit pulvinar pellentesque, in aenean ac a proin, natoque velit habitasse, eros? Pid dictumst? Pulvinar. Egestas, lectus porttitor eros, ac.</p>
+  
+  <p>Dapibus in dolor augue sed. Platea eros placerat auctor ut sit! In placerat tristique porta vut dapibus! Urna sagittis? Dignissim lacus augue etiam. Lundium? Sed sociis vel etiam pid urna pulvinar dis risus, cras dictumst? Cum vel tristique a a? Porta, in tincidunt eu turpis velit. Eu. Tortor magna lectus egestas sociis porttitor, enim. Ac, porta lundium amet ac ridiculus turpis pid eu sit nisi magna. Nisi mid massa rhoncus diam, sagittis cras mattis, odio enim sit. Tincidunt montes! Auctor sit elementum facilisis, dapibus integer pulvinar platea, magnis tristique aliquam pid velit mid. Tortor habitasse, elementum ultrices turpis et platea nunc eros dictumst placerat, placerat hac nec. Tortor vel enim magna, cursus integer! Ac dignissim penatibus placerat ut ultrices.</p>
+    </article>
+    <aside class="sidebar2"><h2>sidebar2</h2></aside>
+  </div>
+</div>
+<!-- <div class="hero">
     <div class="hero-inner">
     <a href="" class="hero-logo"><img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png
 " alt=""></a>
@@ -65,7 +78,7 @@
         </div>
     <button>Learn More</button>
     </div>
-</div>
+</div> -->
 
 
 
